syntax = "proto3";

package leaderboardExportTypes;

message BadgeInformation {
    string description = 1;
    string image_url = 2;
}

message LeaderboardExportItem {
    string id = 1;
    uint32 rank = 2;
    float elo = 3;
    string username = 4;
    int64 delta = 5;
    string avatar = 6;
    repeated BadgeInformation badges = 7;
}

message LeaderboardExport {
    repeated LeaderboardExportItem items = 1;
}